# avrae-ls

./: .gitmodules  Makefile  README.md  action.yml  pyproject.toml  pytest.ini  tmp_avrae_api.html
.github/workflows/: ci.yml  release.yml
docs/: alias-tests.md  configuration.md
scripts/: bump_version.py
src/avrae_ls/: __init__.py  __main__.py  alias_preview.py  alias_tests.py  api.py  argparser.py  code_actions.py  completions.py  config.py  context.py  diagnostics.py  parser.py  runtime.py  server.py  signature_help.py  symbols.py
src/avrae_ls/analysis/: __init__.py  diagnostics.py  parser.py  source_context.py  symbols.py  type_inference.py  type_system.py
src/avrae_ls/lsp/: __init__.py  code_actions.py  completions.py  server.py  signature_help.py
src/avrae_ls/runtime/: __init__.py  alias_preview.py  api.py  argparser.py  context.py  cvars.py  dice.py  runtime.py
src/avrae_ls/testing/: __init__.py  alias_tests.py
tests/: test_alias_preview.py  test_alias_tests.py  test_api.py  test_argparser_unit.py  test_argument_parsing.py  test_code_actions.py  test_completions.py  test_config_env.py  test_cvars.py  test_diagnostics.py  test_extension_manifest.py  test_gvars.py  test_hover.py  test_lsp_integration.py  test_parser.py  test_runtime.py  test_runtime_dice.py  test_signature_help.py  test_symbols.py
vscode-extension/: README.md  extension.js  package-lock.json  package.json
vscode-extension/snippets/: avrae.code-snippets.json
vscode-extension/syntaxes/: avrae-module.tmLanguage.json  avrae.tmLanguage.json
