[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avrae-ls"
version = "0.3.2"
description = "Language server for Avrae draconic aliases"
authors = [
  { name = "1drturtle" }
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygls>=1.3.1",
    "lsprotocol>=2023.0.1",
    "httpx>=0.27",
    "d20>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "ruff>=0.6",
]

[project.scripts]
avrae-ls = "avrae_ls.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "avrae",
    "src/draconic"
]

[tool.setuptools.package-data]
draconic = ["LICENSE"]
